# serpinski

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: Triangle.hpp
include/engine/Renderer/: Interface.hpp  Renderer2D.hpp
src/: Interface.cpp  Renderer.cpp  Triangle.cpp  game.cpp
